--- a/src/main/resources/conf.properties
+++ b/src/main/resources/conf.properties
@@ -1,9 +1,9 @@
-neo4j-core.bolt-uri=bolt://neo4j-neo4j-replica-service.promenade.svc:7687
+neo4j-core.bolt-uri=bolt://neo4j-neo4j-core-0.promenade.svc:7687
 #neo4j-core.bolt-uri=bolt://infra.licit.local:31401
 neo4j-core.user=neo4j
 neo4j-core.password=password
 
-mongo.hostname=mongodb.promenade.svc
+mongo.hostname=mongodb1
 #mongo.hostname=infra.licit.local
 
 mongo.port=27017
