--- a/src/main/resources/conf.properties
+++ b/src/main/resources/conf.properties
@@ -1,4 +1,4 @@
-neo4j-core.bolt-uri=bolt://neo4j-neo4j-core-0.promenade.svc:7687
+neo4j-core.bolt-uri=bolt://neo4j-neo4j-core-0:7687
 #neo4j-core.bolt-uri=bolt://infra.licit.local:31401
 neo4j-core.user=neo4j
 neo4j-core.password=password
